webpack log plugin

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config ./webpack/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/dylan921208/re-Learning/issues"
   },
-  "homepage": "https://github.com/dylan921208/re-Learning#readme"
+  "homepage": "https://github.com/dylan921208/re-Learning#readme",
+  "devDependencies": {
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-log": "^3.0.2"
+  },
+  "dependencies": {
+    "@babel/generator": "^7.14.1",
+    "@babel/parser": "^7.14.1",
+    "@babel/traverse": "^7.14.0",
+    "@babel/types": "^7.14.1",
+    "fibers": "^5.0.0",
+    "loader-utils": "^2.0.0",
+    "sass": "^1.32.12"
+  }
 }
