--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./webpack/webpack.config.js",
+    "start": "webpack serve  --config ./webpack/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,8 +19,8 @@
   },
   "homepage": "https://github.com/dylan921208/re-Learning#readme",
   "devDependencies": {
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-log": "^3.0.2"
   },
   "dependencies": {
@@ -27,8 +28,11 @@
     "@babel/parser": "^7.14.1",
     "@babel/traverse": "^7.14.0",
     "@babel/types": "^7.14.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "fibers": "^5.0.0",
+    "html-webpack-plugin": "^5.3.1",
     "loader-utils": "^2.0.0",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "webpack": "^5.36.2"
   }
 }
