--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/dylan921208/re-Learning#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.2",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-log": "^3.0.2"
